@@ -1,3 +1,9 @@
+aiogcd (0.11.4)
+
+  * Added support for namespaces. (issue #19)
+
+ -- Jeroen van der Heijden <jeroen@transceptor.technology>  06 Oct 2020
+
 aiogcd (0.11.3)
 
   * Fixed typo.
